--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 streamlit
-openai>=1.0.0
+pillow
 pytesseract
-Pillow
 requests
-opencv-python-headless
+openai>=1.0.0
+google-cloud-vision
 urllib3
